# try-jenkins

./: CMakeLists.txt  Jenkinsfile
scripts/: build.sh  run.sh
source/: main.cpp  main.qml
